[AI Fix] (a11y ADA compliance): darken global link color to pass AA contrast

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2474dc !default;
+$brand-color:      #206ac8 !default;
 
 $grey-color:       #6f6f6f !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
